# cloudwalk-ops-intel-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: exploratory_data_analysis.ipynb
setup/: format_black.sh  initialize_db.py
src/agents/: agent_invoker.py
src/agents/prompts/: answers_questions.txt  generate_insights.txt
src/agents/tools/: answers_questions.json  generate_insights.json
src/agents/utils/: prompt_tool_loader.py
src/app/: app.py
src/dashboard/: app.py
src/dashboard/.streamlit/: config.toml
src/dashboard/components/: assistant.py  deep_dive.py  header.py  overview.py  sidebar.py  trends.py
src/dashboard/config/: settings.py
src/dashboard/styles/: theme.html
src/dashboard/utils/: ai_service.py  charts.py  loader.py
src/database/: schema.sql  views.sql
src/utils/: sqlite_manager.py
test/: agent_invoker.py  prompt_tool_loader.py  sqlite_manager.py  test_sqlite_manager.py
