[tool.poetry]
name = "cloudwalk-ops-intel-agent"
version = "0.1.0"
description = ""
authors = ["LucasTechAI <lucas.mendestech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = ">=2.3.3"
python-dotenv = ">=1.2.1"
ollama = ">=0.6.1"
black = ">=25.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
