[tool.poetry]
name = "cloudwalk-ops-intel-agent"
version = "0.1.0"
description = ""
authors = ["LucasTechAI <lucas.mendestech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = ">=2.3.3"
python-dotenv = ">=1.2.1"
ollama = ">=0.6.1"
black = ">=25.11.0"
langchain = ">=1.1.0"
langchain-core = ">=1.1.0"
langchain-ollama = ">=1.0.0"
langchain-community = ">=0.4.1"
langgraph = ">=1.0.4"
langsmith = ">=0.4.49"
pydantic = ">=2.12.5"
pydantic-settings = ">=2.12.0"
httpx = ">=0.28.1"
requests = ">=2.32.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
